# zellij

./: Cargo.toml
default-plugins/compact-bar/: Cargo.toml
default-plugins/session-manager/: Cargo.toml
default-plugins/status-bar/: Cargo.toml
default-plugins/strider/: Cargo.toml
default-plugins/tab-bar/: Cargo.toml
src/: commands.rs  sessions.rs
xtask/: Cargo.toml
xtask/src/: build.rs  flags.rs  main.rs  pipelines.rs  remote.rs  test.rs
zellij-client/: Cargo.toml
zellij-server/: Cargo.toml
zellij-tile/: Cargo.toml
zellij-utils/: Cargo.toml
