[package]
name = "zellij-server"
version = "0.40.0"
authors = ["Kunal Mohan <kunalmohan99@gmail.com>"]
edition = "2021"
description = "The server-side library for Zellij"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
highway = "0.6.4"
ansi_term = "0.12.1"
async-trait = "0.1.77"
base64 = "0.13.1"
byteorder = "1.5.0"
daemonize = "0.4.1"
serde_json = "1.0"
unicode-width = "0.1.11"
url = "2.5.0"
wasmer = "3.1.0"
wasmer-wasi = "3.1.1"
cassowary = "0.3.0"
zellij-utils = { path = "../zellij-utils/", version = "0.40.0" }
log = "0.4.20"
typetag = "0.1.8"
chrono = "0.4.31"
close_fds = "0.3.2"
sysinfo = "0.22.5"
sixel-tokenizer = "0.1.0"
sixel-image = "0.1.0"
arrayvec = "0.7.4"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
semver = "0.11.0"

[dev-dependencies]
insta = "1.6.0"
tempfile = "3.9.0"
wasmer = { version = "3.1.0", features = ["singlepass"] }

[features]
singlepass = ["wasmer/singlepass"]
