[package]
name = "zellij-tile"
version = "0.40.0"
authors = ["Brooks J Rady <b.j.rady@gmail.com>"]
edition = "2021"
description = "A small client-side library for writing Zellij plugins"
license = "MIT"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.20.0"
strum_macros = "0.20.1"
zellij-utils = { path = "../zellij-utils/", version = "0.40.0" }
